<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_diagnostics"
        android:icon="@drawable/ic_diagnostics_24"
        android:title="@string/diagnostics_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_clear_result"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/menu_clear_result"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help_24"
        android:title="@string/menu_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info_24"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit_app"
        android:title="@string/menu_exit_app"
        app:showAsAction="never" />
</menu>
